format script unique